# deteccao-facial

./: main.py  proposta.md  pyproject.toml  relatorio.txt
