[project]
name = "deteccao-facial"
version = "0.1.0"
description = "Sistema de reconhecimento facial - UNIFESO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models @ git+https://github.com/ageitgey/face_recognition_models",
    "opencv-python>=4.10.0",
    "numpy>=2.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "basedpyright>=1.22.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
