[project]
name = "deteccao-facial"
version = "0.1.0"
description = "Sistema de reconhecimento facial - UNIFESO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "insightface>=0.7.3",
    "onnxruntime>=1.20.0",
    "opencv-python>=4.10.0",
    "numpy>=2.2.0",
]

[dependency-groups]
dev = ["ruff>=0.11.0", "basedpyright>=1.22.0"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
